added 'final',get(0) to getFirst(), enhanced switch in peek no Exception